# cancer_genome_atlas_research

./: .gitignore  CLAUDE.md  DATS-6450 Big Data Analytics - Group Project Proposal .md  README.md  final_report.html  final_report.qmd  make_overview_figures.py  pyproject.toml  quick_label_audit.py  requirements.txt  run_classification_pipeline.py  run_ingest.py  run_merge.py  run_merge_6view.py  run_mofa.py  run_pipeline.py  run_preprocess.py  sync_to_s3.py  verify_ingest.py
.githooks/: pre-commit
.planning/: 2026-05-05-phase-4a-session-log.md  2026-05-05-phase-4bd-session-log.md  2026-05-05-session-log.md  2026-05-06-phase-4ef-session-log.md  PROJECT.md  ROADMAP.md  RUNBOOK.md  known-issues.md
code/: analyze_mofa.py  compare_shap_to_panels.py  make_report_figures.py  quick_label_audit.py  run_classification_pipeline.py  run_ingest.py  run_preprocess_subtype.py  sync_to_s3.py  sync_to_s3_archive.py
data/: model_ready_brca_manifest.json  model_ready_cohort_manifest.json  model_ready_luad.parquet  model_ready_luad_manifest.json  model_ready_prad.parquet  model_ready_prad_manifest.json
spark/: README.md  health_check.py  setup-spark-cluster.sh
spark/cluster-files/: pyproject.toml  spark_installation_test.py
src/: gdc_client.py  ingest_cnv.py  ingest_cnv_polars.py  ingest_methylation.py  ingest_methylation_polars.py  ingest_mirna_polars.py  ingest_mutations.py  ingest_rnaseq.py  ingest_rnaseq_multi_file_archive.py  ingest_rnaseq_polars.py  ingest_rppa_polars.py  markers.py  merge.py  merge_archive.py  preprocess.py  utils.py
tests/: test_gdc_client.py  test_ingest_cnv.py  test_merge.py  (+7 more)
(+40 files in other folders)
