[project]
name = "cancer-genome-atlas-research"
version = "0.1.0"
description = "TCGA ETL pipeline: ingest RNA-seq, CNV, and methylation data from public S3 and run XGBoost classifiers with SHAP analysis"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "duckdb>=0.10.0",
    "s3fs>=2024.2.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "pyarrow>=15.0.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
