[project]
name = "cgar-spark-cluster"
version = "0.1.0"
description = "Cluster-side dependencies for BRCA multi-omic Spark jobs (installed on every cluster node by setup-spark-cluster.sh)"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4.0,<3.5.0",
    "boto3>=1.28.0",
    "s3fs>=2024.2.0",
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "awscli>=1.32.0",
    "mofapy2>=0.7.0",
    "h5py>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "*.md",
    "*.txt",
]
